[l10n] [l10n-sync] Synchronising with translation files from packages/po
r28528

--- a/debian/po/ca.po
+++ b/debian/po/ca.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer 1.0\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-02-19 23:31+0100\n"
+"PO-Revision-Date: 2005-06-19 15:11+0300\n"
 "Last-Translator: Guillem Jover <guillem@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -61,7 +61,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Alternativament, podreu arrencar el nucli manualment introduïnt:"
+msgstr "Alternativament, podreu arrencar el nucli manualment introduint:"
 
 #. Type: note
 #. Description
