--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,39 @@
-nobootloader (1.04) UNRELEASED; urgency=low
+nobootloader (1.04) unstable; urgency=low
 
   * Colin Watson
     - Remove useless dependency on parted-udeb.
 
- -- Colin Watson <cjwatson@debian.org>  Mon,  9 May 2005 23:14:40 +0100
+  * Updated translations: 
+    - Arabic (ar.po) by Ossama M. Khayat
+    - Belarusian (be.po) by Andrei Darashenka
+    - Catalan (ca.po) by Guillem Jover
+    - Czech (cs.po) by Miroslav Kure
+    - German (de.po) by Dennis Stampfer
+    - Greek, Modern (1453-) (el.po) by Greek Translation Team
+    - Esperanto (eo.po) by Serge Leblanc
+    - Spanish (es.po) by Javier Fernández-Sanguino Peña
+    - Estonian (et.po) by Siim Põder
+    - Basque (eu.po) by Piarres Beobide
+    - Gallegan (gl.po) by Jacobo Tarrio
+    - Hebrew (he.po) by Lior Kaplan
+    - Italian (it.po) by Giuseppe Sacco
+    - Japanese (ja.po) by Kenshi Muto
+    - Lithuanian (lt.po) by Kęstutis Biliūnas
+    - Malagasy (mg.po) by Jaonary Rabarisoa
+    - Macedonian (mk.po) by Georgi Stanojevski
+    - Macedonian (pa_IN.po) by Amanpreet Singh Alam
+    - Portuguese (pt.po) by Miguel Figueiredo
+    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
+    - Romanian (ro.po) by Eddy Petrişor
+    - Russian (ru.po) by Yuri Kozlov
+    - Tagalog (tl.po) by Eric Pareja
+    - Ukrainian (uk.po) by Eugeniy Meshcheryakov
+    - Vietnamese (vi.po) by Clytie Siddall
+    - Wolof (wo.po) by Mouhamadou Mamoune Mbacke
+    - Xhosa (xh.po) by Canonical Ltd
+    - Traditional Chinese (zh_TW.po) by Tetralet
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 15 Jul 2005 17:57:55 +0300
 
 nobootloader (1.03) unstable; urgency=low
 
