--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2004-11-20 16:07+0100\n"
+"PO-Revision-Date: 2005-07-27 16:57+0200\n"
 "Last-Translator:  Bart Cornelis <cobaco@linux.be>\n"
 "Language-Team: Debian L10n Dutch <debian-l10n-dutch@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -72,13 +72,8 @@ msgstr " ${KERNEL_BOOT}"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid "at the OpenFirmware prompt."
-msgstr ""
-"#-#-#-#-#  nl.po (yaboot-installer)  #-#-#-#-#\n"
-"op de OpenFirmware-prompt.\n"
-"#-#-#-#-#  nl.po (nobootloader)  #-#-#-#-#\n"
-"op de OpenFirmware prompt."
+msgstr "op de OpenFirmware-prompt."
 
 #. Type: note
 #. Description
@@ -124,19 +119,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
 msgstr ""
-"#-#-#-#-#  nl.po (arcboot-installer)  #-#-#-#-#\n"
-"Dit dient u slechts 1x te doen. Daarna kunt u verder gaan met de volgende "
-"installatiestap door het 'boot' commando in te geven, of het systeem te "
-"herstarten.\n"
-"#-#-#-#-#  nl.po (nobootloader)  #-#-#-#-#\n"
-"U dient dit slechts eenmalig uit te voeren. Daarna kunt u het commando "
-"'boot' ingeven, of het systeem herstarten om door te gaan met de volgende "
-"fase van deze Debian-installatie."
+"U hoeft dit slechts eenmalig te doen. Geef daarna het commando 'boot' of "
+"herstart het systeem om verder te gaan met de volgende fase van de "
+"installatie."
 
 #. Type: note
 #. Description
