* Update GPL notices with the FSF's new address.
r29609

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nobootloader (1.05) UNRELEASED; urgency=low
+
+  * Update GPL notices with the FSF's new address.
+
+ -- Colin Watson <cjwatson@debian.org>  Sun, 31 Jul 2005 17:13:30 +0100
+
 nobootloader (1.04) unstable; urgency=low
 
   * Colin Watson
