[l10n] [l10n-sync] Synchronising with translation files from packages/po
r29721

--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -3,8 +3,9 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of de.neu.po to 
 # translation of de.po to 
+# translation of de.neu.po to
+# translation of de.po to
 # German messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
@@ -19,9 +20,9 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: de.neu\n"
+"Project-Id-Version: de\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-04-13 23:07GMT\n"
+"PO-Revision-Date: 2005-08-04 22:12+0200\n"
 "Last-Translator: \n"
 "Language-Team:  <de@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -85,13 +86,13 @@ msgstr " ${KERNEL_BOOT}"
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr "an der Eingabeaufforderung von OpenFirmware"
+msgstr " an der Eingabeaufforderung von OpenFirmware eingeben."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "Setzen der Firmware Variablen für den automatischen Start"
+msgstr "Setzen der Firmware-Variablen für den automatischen Start"
 
 #. Type: note
 #. Description
