--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -3,28 +3,25 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of de.po to 
-# translation of de.neu.po to
-# translation of de.po to
 # German messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
 #
-#
-# This file is maintained by Dennis Stampfer <seppy@debian.org>
 # Dennis Stampfer <seppy@debian.org>, 2003, 2004, 2005.
 # Alwin Meschede <ameschede@gmx.de>, 2003, 2004.
 # Bastian Blank <waldi@debian.org>, 2003.
 # Jan Luebbe <jluebbe@lasnet.de>, 2003.
 # Thorsten Sauter <tsauter@gmx.net>, 2003.
 #
+# This file is maintained by Dennis Stampfer <seppy@debian.org>
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: de\n"
+"Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-08-04 22:12+0200\n"
-"Last-Translator: \n"
-"Language-Team:  <de@li.org>\n"
+"PO-Revision-Date: 2005-08-05 17:02+0200\n"
+"Last-Translator: Holger Wansing <h.wansing@onlinehome.de>\n"
+"Language-Team: Debian German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -137,7 +134,7 @@ msgid ""
 "or reboot the system to proceed to the next Debian installation stage."
 msgstr ""
 "Dies muss nur einmal ausgeführt werden. Geben Sie danach den »boot«-Befehl "
-"ein oder starten Sie den Computer neu um mit dem nächsten "
+"ein oder starten Sie den Computer neu, um mit dem nächsten "
 "Installationsschritt fortzufahren."
 
 #. Type: note
@@ -154,7 +151,7 @@ msgid ""
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
 "Es wurde kein Bootloader installiert. Entweder Sie haben sich dazu "
-"entschieden keinen zu installieren, oder Ihre Architektur unterstützt noch "
+"entschieden, keinen zu installieren, oder Ihre Architektur unterstützt noch "
 "keine Bootloader."
 
 #. Type: note
