* Update for rename of link_in_boot template, depend on new base-installer   that contains the new one.
r29819

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 nobootloader (1.05) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Update GPL notices with the FSF's new address.
 
- -- Colin Watson <cjwatson@debian.org>  Sun, 31 Jul 2005 17:13:30 +0100
+  [ Joey Hess ]
+  * Update for rename of link_in_boot template, depend on new base-installer
+    that contains the new one.
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  9 Aug 2005 15:17:34 -0400
 
 nobootloader (1.04) unstable; urgency=low
 
