[l10n] [l10n-sync] Synchronising with translation files from packages/po
r29859

--- a/debian/po/bs.po
+++ b/debian/po/bs.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2004-11-26 19:23+0100\n"
-"Last-Translator: Safir Šećerović <sapphire@linux.org.ba>\n"
+"PO-Revision-Date: 2005-03-28 21:47CET\n"
+"Last-Translator: Safir eerovi <sapphire@linux.org.ba>\n"
 "Language-Team: Bosnian <lokal@linux.org.ba>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -36,10 +36,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Neke varijable se trebaju postaviti Pegasos OpenFirmware-u kako bi vaš "
-"sistem automatski podizao Debian.  Na kraju instalacije, sistem će se ponovo "
-"podići.  Na Pegasos OpenFirmware promptu, postavite slijedeće OpenFirmware "
-"varijable kako bi omogućili automatsko podizanje:"
+"Neke varijable se trebaju postaviti Pegasos OpenFirmware-u kako bi va sistem "
+"automatski podizao Debian.  Na kraju instalacije, sistem e se ponovo podii.  "
+"Na Pegasos OpenFirmware promptu, postavite slijedee OpenFirmware varijable "
+"kako bi omoguili automatsko podizanje:"
 
 #. Type: note
 #. Description
@@ -62,7 +62,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Alternativno, možete podići kernel ručno unoseći :"
+msgstr "Alternativno, moete podii kernel runo unosei :"
 
 #. Type: note
 #. Description
@@ -92,11 +92,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Neke varijable se trebaju postaviti Netwinder NeTTrom firmwareu kako bi vaš "
-"sistem automatski podizao Debian.  Na kraju ove faze instalacije, sistem će "
-"se ponovo podići i firmware će pokušati automatsko podizanje.  Možete "
-"prekinuti ovo pritiskanjem bilo koje tipke. Tada ćete biti prebačeni u "
-"NeTTrom komandni sistem gdje trebate ukucati sljedeće naredbe:"
+"Neke varijable se trebaju postaviti Netwinder NeTTrom firmwareu kako bi va "
+"sistem automatski podizao Debian.  Na kraju ove faze instalacije, sistem e "
+"se ponovo podii i firmware e pokuati automatsko podizanje.  Moete prekinuti "
+"ovo pritiskanjem bilo koje tipke. Tada ete biti prebaeni u NeTTrom komandni "
+"sistem gdje trebate ukucati sljedee naredbe:"
 
 #. Type: note
 #. Description
@@ -124,7 +124,7 @@ msgid ""
 "or reboot the system to proceed to the next Debian installation stage."
 msgstr ""
 "Ovo trebate uraditi samo jedanput.  Nakon toga, ukucajte \"boot\" naredbu "
-"ili ponovo podignite sistem kako biste nastavili sa sljedećom instalacionom "
+"ili ponovo podignite sistem kako biste nastavili sa sljedeom instalacionom "
 "fazom Debiana."
 
 #. Type: note
@@ -140,8 +140,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Boot loader nije instaliran, ili zbog toga što ste tako izabrali ili zbog "
-"toga što vaša specifična arhitektura još uvijek ne podržava boot loader."
+"Boot loader nije instaliran, ili zbog toga to ste tako izabrali ili zbog "
+"toga to vaa specifina arhitektura jo uvijek ne podrava boot loader."
 
 #. Type: note
 #. Description
@@ -150,5 +150,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
 msgstr ""
-"Trebati ćete ručno podignuti sistem sa ${KERNEL} kernelom na particiji "
-"${BOOT} i ${ROOT} proslijeđenim kao argumentom za kernel."
+"Trebati ete runo podignuti sistem sa ${KERNEL} kernelom na particiji ${BOOT} "
+"i ${ROOT} proslijeenim kao argumentom za kernel."
