--- a/debian/po/lv.po
+++ b/debian/po/lv.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2004-10-05 22:05+0300\n"
+"PO-Revision-Date: 2004-10-26 08:41+0200\n"
 "Last-Translator: Aigars Mahinovs <aigarius@debian.org>\n"
 "Language-Team: Latvian <locale@laka.lv>\n"
 "MIME-Version: 1.0\n"
@@ -26,7 +26,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Turpināt bez sakņošanas lādētāja"
+msgstr "Turpint bez sakoanas ldtja"
 
 #. Type: note
 #. Description
@@ -108,7 +108,7 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Iekārta saknēšanas lādētājs nav izvēlēts"
+msgstr "Iekrta saknanas ldtjs nav izvlts"
 
 #. Type: note
 #. Description
