--- a/debian/po/pa_IN.po
+++ b/debian/po/pa_IN.po
@@ -33,7 +33,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "ਬੂਟ ਲੋਡਰ ਨਾਲ ਜਾਰੀ ਕਰੋ"
+msgstr "    "
 
 #. Type: note
 #. Description
@@ -44,9 +44,8 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"ਕੁਝ ਵੇਰੀਬਲ ਤੁਹਾਡੇ ਸਿਸਟਮ ਨੂੰ ਸਵੈ ਹੀ ਡੇਬੀਅਨ ਬੂਟ ਕਰਨ ਲਈ Pegasos OpenFirmware ਵਿੱਚ "
-"ਨਿਰਧਾਰਿਤ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਇੰਸਟਾਲੇਸ਼ਨ ਦੇ ਅੰਤ ਵਿੱਚ ਸਿਸਟਮ ਮੁੜ ਚੱਲੇਗਾ। Pegasos OpenFirmware "
-"ਪ੍ਰਾਉਟ ਤੇ, ਸਵ-ਬੂਟਿੰਗ ਯੋਗ ਕਰਨ ਲਈ ਹੇਠਲੇ OpenFirmware ਵੇਰੀਬਲ ਨਿਰਧਾਰਿਤ ਕਰੋ:"
+"           Pegasos OpenFirmware              Pegasos OpenFirmware  , -     "
+"OpenFirmware   :"
 
 #. Type: note
 #. Description
@@ -57,17 +56,17 @@ msgid ""
 " setenv auto-boot-timeout 5000\n"
 " setenv auto-boot? true"
 msgstr ""
-" setenv ਬੂਟ-ਜੰਤਰ ${OF_BOOT_DEVICE}\n"
-" setenv ਬੂਟ-ਫਾਇਲ ${OF_BOOT_FILE}\n"
-" setenv ਸਵੈ-ਬੂਟ-ਮਿਆਦ 5000\n"
-" setenv ਸਵੈ-ਬੂਟ? ਠੀਕ"
+" setenv - ${OF_BOOT_DEVICE}\n"
+" setenv - ${OF_BOOT_FILE}\n"
+" setenv -- 5000\n"
+" setenv -? "
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "ਨਾਲ ਹੀ, ਤੁਸੀਂ ਇਹ ਭਰਕੇ ਕਰਨਲ ਨੂੰ ਦਸਤੀ ਬੂਟ ਕਰਨ ਦੇ ਯੋਗ ਹੋਵੋਗੇ:"
+msgstr " ,           :"
 
 #. Type: note
 #. Description
@@ -79,13 +78,13 @@ msgstr " ${KERNEL_BOOT}"
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr "OpenFirmware ਪ੍ਰਾਉਟ ਤੇ।"
+msgstr "OpenFirmware  "
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "ਸਵੈ ਬੂਟ ਕਰਨ ਲਈ firmware ਵੇਰੀਬਲ ਨਿਰਧਾਰਿਤ ਕਰ ਰਿਹਾ ਹੈ"
+msgstr "    firmware     "
 
 #. Type: note
 #. Description
@@ -97,10 +96,8 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"ਕੁਝ ਵੇਰੀਬਲ ਤੁਹਾਡੇ ਸਿਸਟਮ ਨੂੰ ਸਵੈ ਹੀ ਡੇਬੀਅਨ ਬੂਟ ਕਰਨ ਲਈ Netwinder NeTTrom firmware ਵਿੱਚ "
-"ਨਿਰਧਾਰਿਤ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਇਸ ਇੰਸਟਾਲੇਸ਼ਨ ਦੇ ਅੰਤ ਵਿੱਚ, ਸਿਸਟਮ ਮੁੜ ਚੱਲੇਗਾ, ਅਤੇ firmware ਸਵੈ-ਬੂਟ "
-"ਕਰੇਗਾ। ਤੁਸੀਂ ਕੋਈ ਸਵਿੱਚ ਦਬਾ ਕੇ ਇਸ ਨੂੰ ਅਧੂਰਾ ਖਤਮ ਕਰ ਸਕਦੇ ਹੋ। ਤੁਸੀਂ ਫਿਰ NeTTrom ਕਮਾਂਡ ਸਿਸਟਮ "
-"ਵਿੱਚ ਜਾਓਗੇ ਜਿੱਥੇ ਤੁਸੀਂ ਹੇਠਲੀਆਂ ਕਮਾਂਡਾਂ ਚਲਾਉਣੀਆਂ ਹਨ:"
+"           Netwinder NeTTrom firmware           ,   ,  firmware "
+"-                NeTTrom          :"
 
 #. Type: note
 #. Description
@@ -118,7 +115,7 @@ msgstr ""
 "   setenv kernfile ${KERNFILE}\n"
 "   setenv rootdev ${ROOTDEV}\n"
 "   setenv cmdappend ${CMDAPPEND}\n"
-"   ਸਾਰੇ-ਸੰਭਾਲੋ"
+"   -"
 
 #. Type: note
 #. Description
@@ -126,15 +123,13 @@ msgstr ""
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
-msgstr ""
-"ਤੁਹਾਨੂੰ ਇਹ ਸਿਰਫ ਇੱਕ ਵਾਰ ਕਰਨਾ ਪਵੇਗਾ। ਬਾਅਦ ਵਿੱਚ, \"boot\" ਕਮਾਂਡ ਦਿਓ ਜਾਂ ਸਿਸਟਮ ਨੂੰ ਅਗਲੀ "
-"ਡੇਬੀਅਨ ਇੰਸਟਾਲੇਸ਼ਨ ਸਥਿਤੀ ਜਾਰੀ ਕਰਨ ਲਈ ਮੁੜ ਚਲਾਓ।"
+msgstr "        , \"boot\"              "
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "ਕੋਈ ਬੂਟ ਲੋਡਰ ਇੰਸਟਾਲ ਨਹੀਂ"
+msgstr "    "
 
 #. Type: note
 #. Description
@@ -142,9 +137,7 @@ msgstr "ਕੋਈ ਬੂਟ ਲੋਡਰ ਇੰਸਟਾਲ ਨਹੀਂ"
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
-msgstr ""
-"ਕੋਈ ਬੂਟ ਲੋਡਰ ਇੰਸਟਾਲ ਨਹੀਂ ਕੀਤਾ ਹੈ, ਜਾਂ ਤਾਂ ਤੁਸੀਂ ਚੁਣਿਆ ਨਹੀਂ ਜਾਂ ਤੁਹਾਡਾ ਖਾਸ ਨਿਰਮਾਣ ਬੂਟ ਲੋਡਰ ਨੂੰ "
-"ਸਹਿਯੋਗ ਨਹੀਂ ਦਿੰਦਾ।"
+msgstr "      ,               "
 
 #. Type: note
 #. Description
@@ -152,6 +145,4 @@ msgstr ""
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
-msgstr ""
-"ਤੁਹਾਨੂੰ ${BOOT} ਭਾਗ ਤੇ ${KERNEL} ਕਰਨਲ ਨਾਲ ਬੂਟ ਕਰਨ ਦੀ ਜਰੂਰਤ ਪਵੇਗੀ ਅਤੇ ਕਰਨਲ ਮੁੱਲ ਤੌਰ ਤੇ "
-"${ROOT} ਦੇਣਾ ਪਵੇਗਾ।"
+msgstr " ${BOOT}   ${KERNEL}             ${ROOT}  "
