--- a/debian/po/pt.po
+++ b/debian/po/pt.po
@@ -33,7 +33,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-06-13 08:46+0100\n"
+"PO-Revision-Date: 2005-07-30 08:57+0000\n"
 "Last-Translator:  Miguel Figueiredo <elmig@debianpt.org>\n"
 "Language-Team:  Portuguese <traduz@debianpt.org>\n"
 "MIME-Version: 1.0\n"
@@ -57,10 +57,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Algumas variáveis necessitam ser definidas no Pegasos OpenFirmware de modo a "
-"que o seu sistema Debian arranque automaticamente. No fim da instalação, o "
+"Algumas variveis necessitam ser definidas no Pegasos OpenFirmware de modo a "
+"que o seu sistema Debian arranque automaticamente. No fim da instalao, o "
 "sistema vai reiniciar. Na linha de comandos do Pegasos OpenFirmware, defina "
-"as seguintes variáveis do OpenFirmware para habilitar o arranque automático:"
+"as seguintes variveis do OpenFirmware para habilitar o arranque automtico:"
 
 #. Type: note
 #. Description
@@ -81,7 +81,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Alternativamente, poderá iniciar o kernel manualmente introduzindo :"
+msgstr "Alternativamente, poder iniciar o kernel manualmente introduzindo :"
 
 #. Type: note
 #. Description
@@ -99,7 +99,7 @@ msgstr "na prompt do OpenFirmware."
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "A definir variáveis de firmware para arranque automático"
+msgstr "A definir variveis de firmware para arranque automtico"
 
 #. Type: note
 #. Description
@@ -111,10 +111,10 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Algumas variáveis necessitam ser definidas no firmware Netwinder NeTTrom de "
+"Algumas variveis necessitam ser definidas no firmware Netwinder NeTTrom de "
 "modo que o seu sistema Debian arranque automaticamente.  No fim desta etapa "
-"de instalação, o sistema vai reiniciar, e o firmware vai tentar iniciar "
-"automaticamente.  Pode abortar pressionando qualquer tecla. Irá então para o "
+"de instalao, o sistema vai reiniciar, e o firmware vai tentar iniciar "
+"automaticamente.  Pode abortar pressionando qualquer tecla. Ir ento para o "
 "sistema de comandos NeTTrom onde tem de executar os seguintes comandos:"
 
 #. Type: note
@@ -142,8 +142,8 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
 msgstr ""
-"Só necessita fazer isto uma vez.  Depois, introduza o comando \"boot\" ou "
-"reinicie o sistema para proceder à próxima etapa de instalação de Debian."
+"S necessita fazer isto uma vez.  Depois, introduza o comando \"boot\" ou "
+"reinicie o sistema para proceder  prxima etapa de instalao de Debian."
 
 #. Type: note
 #. Description
@@ -158,9 +158,9 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Nenhum carregador do sistema foi instalado, ou porque escolheu não o fazer "
-"ou devido à sua arquitectura específica que ainda não suporta um carregador "
-"do sistema."
+"Nenhum carregador do sistema foi instalado, ou porque escolheu no o fazer ou "
+"devido  sua arquitectura especfica que ainda no suporta um carregador do "
+"sistema."
 
 #. Type: note
 #. Description
@@ -169,5 +169,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
 msgstr ""
-"Vai necessitar iniciar manualmente com o kernel ${KERNEL} na partição "
-"${BOOT} e ${ROOT} passados como argumentos do kernel."
+"Vai necessitar iniciar manualmente com o kernel ${KERNEL} na partio ${BOOT} "
+"e ${ROOT} passados como argumentos do kernel."
