--- a/debian/po/ro.po
+++ b/debian/po/ro.po
@@ -24,8 +24,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ro\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-06-07 22:59+0200\n"
-"Last-Translator: Eddy Petrişor <eddy.petrisor@gmail.com>\n"
+"PO-Revision-Date: 2005-06-25 19:19+0200\n"
+"Last-Translator: Eddy Petrior <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,7 +38,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Continuă fără încărcător de sistem"
+msgstr "Continu fr ncrctor de sistem"
 
 #. Type: note
 #. Description
@@ -49,10 +49,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Unele variabile trebuie să fie setate în Pegasos OpenFirmware pentru ca "
-"sistemul dvs. să poată porni Debian automat.  La sfârşitul instalării "
-"sistemul va reporni.  La promptul Pegasos OpenFirmware setaţi următoarele "
-"variabile OpenFirmware pentru a activa pornirea automată:"
+"Unele variabile trebuie s fie setate n Pegasos OpenFirmware pentru ca "
+"sistemul dvs. s poat porni Debian automat.  La sfritul instalrii sistemul va "
+"reporni.  La promptul Pegasos OpenFirmware setai urmtoarele variabile "
+"OpenFirmware pentru a activa pornirea automat:"
 
 #. Type: note
 #. Description
@@ -73,7 +73,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Sau veţi putea să porniţi nucleul manual introducând:"
+msgstr "Sau vei putea s pornii nucleul manual introducnd:"
 
 #. Type: note
 #. Description
@@ -91,7 +91,7 @@ msgstr "la promptul OpenFirmware."
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "Se pregătesc variabilele firmware pentru pornire automată"
+msgstr "Se pregtesc variabilele firmware pentru pornire automat"
 
 #. Type: note
 #. Description
@@ -103,11 +103,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Unele variabile trebuie să fie setate în firmware-ul Netwinder NeTTrom "
-"pentru ca sistemul dvs. să poată porni Debian automat. La sfârşitul "
-"instalării sistemul va reporni şi firmware-ul va încerca să pornească "
-"automat. Puteţi abandona prin apăsarea unei taste. Veţi fi lăsaţi la "
-"sistemul de comenzi NeTTrom unde va trebui să executaţi următoarele comenzi:"
+"Unele variabile trebuie s fie setate n firmware-ul Netwinder NeTTrom pentru "
+"ca sistemul dvs. s poat porni Debian automat. La sfritul instalrii sistemul "
+"va reporni i firmware-ul va ncerca s porneasc automat. Putei abandona prin "
+"apsarea unei taste. Vei fi lsai la sistemul de comenzi NeTTrom unde va "
+"trebui s executai urmtoarele comenzi:"
 
 #. Type: note
 #. Description
@@ -134,15 +134,15 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
 msgstr ""
-"Va trebui să faceţi acest lucru doar o dată. După aceea, introduceţi comanda "
-"\"boot\" sau reporniţi sistemul pentru a continua la următoarea etapă a a "
+"Va trebui s facei acest lucru doar o dat. Dup aceea, introducei comanda "
+"\"boot\" sau repornii sistemul pentru a continua la urmtoarea etap a a "
 "procesului de instalare Debian."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Nu exista încărcător de sistem"
+msgstr "Nu exista ncrctor de sistem"
 
 #. Type: note
 #. Description
@@ -151,9 +151,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Nu s-a instalat nici un încărcător de sistem, pentru că aţi ales să nu-l "
-"instalaţi sau pentru că arhitectura dvs. nu suportă încă un încărcător de "
-"sistem."
+"Nu s-a instalat nici un ncrctor de sistem, pentru c ai ales s nu-l instalai "
+"sau pentru c arhitectura dvs. nu suport nc un ncrctor de sistem."
 
 #. Type: note
 #. Description
@@ -162,5 +161,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
 msgstr ""
-"Va trebui să porniţi manual cu nucleul ${KERNEL} pe partiţia ${BOOT}, iar "
+"Va trebui s pornii manual cu nucleul ${KERNEL} pe partiia ${BOOT}, iar "
 "${ROOT} palsat ca argument de nucleu."
