--- a/debian/po/uk.po
+++ b/debian/po/uk.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: uk\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-07-21 22:12+0300\n"
+"PO-Revision-Date: 2005-08-02 16:36+0300\n"
 "Last-Translator: Eugeniy Meshcheryakov <eugen@univ.kiev.ua>\n"
 "Language-Team: Ukrainian <ukrainian>\n"
 "MIME-Version: 1.0\n"
@@ -29,7 +29,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Продовжити без завантажувача"
+msgstr "  "
 
 #. Type: note
 #. Description
@@ -40,10 +40,7 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Для автоматичного завантаження Debian необхідно встановити змінні Pegasos "
-"OpenFirmware. Після закінчення встановлення система перезвантажиться. Для "
-"автоматичного завантаження, встановіть наступні змінні із командного рядка "
-"Pegasos OpenFirmware:"
+"   Debian    Pegasos OpenFirmware.     .   ,       Pegasos OpenFirmware:"
 
 #. Type: note
 #. Description
@@ -64,7 +61,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Також ви можете завантажити ядро вручну ввівши:"
+msgstr "      :"
 
 #. Type: note
 #. Description
@@ -76,15 +73,13 @@ msgstr " ${KERNEL_BOOT}"
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr "в командному рядку OpenFirmware."
+msgstr "   OpenFirmware."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr ""
-"Встановлюються змінні вбудованого програмного забезпечення для автоматичного "
-"завантаження"
+msgstr "       "
 
 #. Type: note
 #. Description
@@ -96,12 +91,8 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Для автоматичного завантаження Debian необхідно встановити змінні "
-"вбудованого програмного забезпечення Netwinder NeTTrom. Після закінчення "
-"цього етапу встановлення система перезвантажиться та вбудоване програмне "
-"забезпечення намагатиметься завантажитися автоматично. Ви можете перервати "
-"це натиснувши будь-яку клавішу. Після цього ви попадете в командну систему "
-"NeTTrom, де вам потрібно буде виконати наступні команди:"
+"   Debian       Netwinder NeTTrom.              .      - .        "
+"NeTTrom,       :"
 
 #. Type: note
 #. Description
@@ -127,15 +118,13 @@ msgstr ""
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
-msgstr ""
-"Вам потрібно буде зробити це тільки один раз. Після цього, наберіть „boot“ "
-"або перезавантажте систему для наступного етапу встановлення Debian."
+msgstr "       .  ,  boot        Debian."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Завантажувач не встановлений"
+msgstr "  "
 
 #. Type: note
 #. Description
@@ -143,9 +132,7 @@ msgstr "Завантажувач не встановлений"
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
-msgstr ""
-"Завантажувач не був встановлений, оскільки ви вирішили цього не робити, або "
-"встановлення завантажувача на ваш тип комп'ютера поки неможливе."
+msgstr "   ,      ,       '  ."
 
 #. Type: note
 #. Description
@@ -153,6 +140,4 @@ msgstr ""
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
-msgstr ""
-"Ви повинні будете завантажитися вручну з ядром ${KERNEL} на розділі ${BOOT} "
-"та з ${ROOT} переданим, як аргумент ядра."
+msgstr "       ${KERNEL}   ${BOOT}   ${ROOT} ,   ."
