--- a/debian/po/ar.po
+++ b/debian/po/ar.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer_packages_po\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-05-27 19:35+0300\n"
+"PO-Revision-Date: 2005-07-07 15:29+0300\n"
 "Last-Translator: Ossama M. Khayat <okhayat@yahoo.com>\n"
 "Language-Team: Arabic <support@arabeyes.org>\n"
 "MIME-Version: 1.0\n"
@@ -23,7 +23,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "المتابعة دون محمّل إقلاع"
+msgstr "   "
 
 #. Type: note
 #. Description
@@ -33,10 +33,7 @@ msgid ""
 "system to boot Debian automatically.  At the end of the installation, the "
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
-msgstr ""
-"يجب تعيين بعض المتغيّرات في Pegasos OpenFirmware كي تمكّن نظامك من إقلاع "
-"ديبيان تلقائيّاً. عند نهاية التثبيت،سيعيد النظام الإقلاع. عند ملقن Pegasos "
-"OpenFirmware، حدّد المُتغيرات التالية كي تُمكّن الإقلاع التلقائي:"
+msgstr "     Pegasos OpenFirmware       .     .   Pegasos OpenFirmware       :"
 
 #. Type: note
 #. Description
@@ -57,7 +54,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "عوضاً عن ذلك، ستكون قادراً على إقلاع النواة يدوياً بكتابة :"
+msgstr "          :"
 
 #. Type: note
 #. Description
@@ -69,13 +66,13 @@ msgstr " ${KERNEL_BOOT}"
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr "عند ملقّن OpenFirmware."
+msgstr "  OpenFirmware."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "تعيين متغيّرات البرمجيّات الضّمنيّة للإقلاع التّلقائي"
+msgstr "     "
 
 #. Type: note
 #. Description
@@ -86,11 +83,7 @@ msgid ""
 "stage, the system will reboot, and the firmware will attempt to autoboot.  "
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
-msgstr ""
-"يجب تعيين بعض المتغيّرات في برامج NeTTrom الضّمنيّة حتّى يتمكّن نظامك من إقلاع "
-"ديبيان تلقائيّاً. عند نهاية مرحلة التثبيت سيعيد النظام الإقلاع و ستجرّب البرامج "
-"الضّمنيّة الإقلاع تلقائيّاً. يمكنك إجهاض هذا بالضّغط على أي مفتاح. عندها ستُسقط في "
-"نظام أوامر NeTTrom حيث سيتعيّن عليك إدخال الأوامر التّالية:"
+msgstr "      NeTTrom        .             .       .      NeTTrom      :"
 
 #. Type: note
 #. Description
@@ -116,15 +109,13 @@ msgstr ""
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
-msgstr ""
-"ستحتاج للقيام بهذا مرّةً واحدة فقط. بعد ذلك، أدخل الأمر \"boot\" أو قم بإعادة "
-"تشغيل النظام كي تتقدّم نحو مرحلة التثبيت الثّانية لديبيان."
+msgstr "     .     \"boot\"            ."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "لا يوجد أي محمل إقلاع مثبّت"
+msgstr "     "
 
 #. Type: note
 #. Description
@@ -132,9 +123,7 @@ msgstr "لا يوجد أي محمل إقلاع مثبّت"
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
-msgstr ""
-"لم يثبّت أي محمّل إقلاع إمّا لأنّك اخترت ذلك أو لأن هندسة نظامك بالذّات لا تدعم "
-"محمّلات الإقلاع بعد."
+msgstr "                  ."
 
 #. Type: note
 #. Description
@@ -142,6 +131,4 @@ msgstr ""
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
-msgstr ""
-"ستضطر إلى الإقلاع يدويّاً بنواة ${KERNEL} على الجزء ${BOOT} و بتمرير ${ROOT} "
-"كمعطىً للنّواة."
+msgstr "     ${KERNEL}   ${BOOT}   ${ROOT}  ."
