--- a/debian/po/et.po
+++ b/debian/po/et.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: et\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
 "PO-Revision-Date: 2005-06-08 11:11+0300\n"
-"Last-Translator: Siim Põder <windo@windowlicker.dyn.ee>\n"
+"Last-Translator: Siim Pder <windo@windowlicker.dyn.ee>\n"
 "Language-Team: Eesti <linuxiabi@hot.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -35,7 +35,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Jätka ilma alglaadurita"
+msgstr "Jtka ilma alglaadurita"
 
 #. Type: note
 #. Description
@@ -46,10 +46,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Et su süsteem võiks automaatselt Debiani alglaadida, tuleb seada mõned "
-"Pegasos OpenFirmware muutujad. Paigaldamise lõpus sooritab süsteem "
-"alglaadimise. Automaatse alglaadimise saavutamiseks sisesta Pegasos "
-"OpenFirmware käsureal järgnev:"
+"Et su ssteem viks automaatselt Debiani alglaadida, tuleb seada mned Pegasos "
+"OpenFirmware muutujad. Paigaldamise lpus sooritab ssteem alglaadimise. "
+"Automaatse alglaadimise saavutamiseks sisesta Pegasos OpenFirmware ksureal "
+"jrgnev:"
 
 #. Type: note
 #. Description
@@ -70,7 +70,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Teise variandina võid tuuma ka käsitsi alglaadida, sisestades:"
+msgstr "Teise variandina vid tuuma ka ksitsi alglaadida, sisestades:"
 
 #. Type: note
 #. Description
@@ -82,13 +82,13 @@ msgstr " ${KERNEL_BOOT}"
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr "OpenFirmware käsureal."
+msgstr "OpenFirmware ksureal."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "Püsivara muutujate seadmine automaatseks alglaadimiseks"
+msgstr "Psivara muutujate seadmine automaatseks alglaadimiseks"
 
 #. Type: note
 #. Description
@@ -100,11 +100,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Et su süsteem võiks automaatselt Debiani alglaadida, tuleb Netwinder NETTRom "
-"püsivaras seada mõned muutujad. Selle paigaldamisastme lõpus sooritab "
-"süsteem alglaadimise, misjärel püsivara püüab automaatselt alglaadida. Selle "
-"peatamiseks vajuta suvalist klahvi. Sind lastakse NeTTrom käsusüsteemi, kus "
-"pead käivitama järgnevad käsud:"
+"Et su ssteem viks automaatselt Debiani alglaadida, tuleb Netwinder NETTRom "
+"psivaras seada mned muutujad. Selle paigaldamisastme lpus sooritab ssteem "
+"alglaadimise, misjrel psivara pab automaatselt alglaadida. Selle peatamiseks "
+"vajuta suvalist klahvi. Sind lastakse NeTTrom ksussteemi, kus pead kivitama "
+"jrgnevad ksud:"
 
 #. Type: note
 #. Description
@@ -131,14 +131,14 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
 msgstr ""
-"Pead nõnda tegema ainult ühe korra. Edaspidi sisesta käsk \"boot\" või "
-"soorita alglaadimine, et jätkata Debiani paigaldamise järgmise astmega."
+"Pead nnda tegema ainult he korra. Edaspidi sisesta ksk \"boot\" vi soorita "
+"alglaadimine, et jtkata Debiani paigaldamise jrgmise astmega."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Ühtki alglaadurit pole paigaldatud"
+msgstr "htki alglaadurit pole paigaldatud"
 
 #. Type: note
 #. Description
@@ -147,8 +147,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Ühtki alglaadurit ei paigaldatud, kuna sa kas ise soovisid alglaadurit mitte "
-"paigaldada või siis pole su spetsiifilist arhitektuuri toetavat alglaadurit "
+"htki alglaadurit ei paigaldatud, kuna sa kas ise soovisid alglaadurit mitte "
+"paigaldada vi siis pole su spetsiifilist arhitektuuri toetavat alglaadurit "
 "saadaval."
 
 #. Type: note
@@ -158,5 +158,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
 msgstr ""
-"Pead alglaadima käsitsi tuuma ${KERNEL} partitsioonil ${BOOT} sisestades "
+"Pead alglaadima ksitsi tuuma ${KERNEL} partitsioonil ${BOOT} sisestades "
 "tuuma argumendiks ${ROOT}."
