--- a/debian/po/hi.po
+++ b/debian/po/hi.po
@@ -31,8 +31,9 @@ msgstr ""
 #. Description
 #. Main menu item
 #: ../nobootloader.templates:4
+#, fuzzy
 msgid "Continue without boot loader"
-msgstr ""
+msgstr "       "
 
 #. Type: note
 #. Description
@@ -70,8 +71,9 @@ msgstr " ${KERNEL_BOOT}"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
+#, fuzzy
 msgid "at the OpenFirmware prompt."
-msgstr ""
+msgstr "      "
 
 #. Type: note
 #. Description
@@ -114,7 +116,7 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "कोई बूट लोडर संस्थापित नहीं है"
+msgstr "     "
 
 #. Type: note
 #. Description
