--- a/debian/po/mg.po
+++ b/debian/po/mg.po
@@ -73,8 +73,9 @@ msgstr " ${KERNEL_BOOT}"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
+#, fuzzy
 msgid "at the OpenFirmware prompt."
-msgstr ""
+msgstr "Manefy ny OpenFirmware"
 
 #. Type: note
 #. Description
