--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nl\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-07-27 16:57+0200\n"
+"PO-Revision-Date: 2005-08-05 16:49+0100\n"
 "Last-Translator: Bart Cornelis <cobaco@linux.be>\n"
 "Language-Team: Dutch <debian-l10n-dutch@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -134,7 +134,7 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Er is geen opstartlader geïnstalleerd"
+msgstr "Er is geen opstartlader genstalleerd"
 
 #. Type: note
 #. Description
@@ -143,8 +143,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Er is geen opstartlader geïnstalleerd. Dit komt of doordat u hiervoor "
-"gekozen heeft, of doordat uw specifieke architectuur nog geen opstartlader "
+"Er is geen opstartlader genstalleerd. Dit komt of doordat u hiervoor gekozen "
+"heeft, of doordat uw specifieke architectuur nog geen opstartlader "
 "ondersteunt."
 
 #. Type: note
