--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ru\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-05-24 19:18+0400\n"
+"PO-Revision-Date: 2005-07-25 21:11+0400\n"
 "Last-Translator: Yuri Kozlov <yuray@id.ru>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -31,7 +31,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Продолжение установки без системного загрузчика"
+msgstr "    "
 
 #. Type: note
 #. Description
@@ -42,10 +42,7 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Для автоматического запуска Debian требуется установить некоторые переменные "
-"в Pegasos OpenFirmware. В конце установки, система будет перезагружена. Из "
-"приглашения Pegasos OpenFirmware установите следующие переменные для "
-"автозагрузки:"
+"   Debian      Pegasos OpenFirmware.   ,   .   Pegasos OpenFirmware     :"
 
 #. Type: note
 #. Description
@@ -66,7 +63,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Или вы можете загрузить ядро вручную с помощью команд:"
+msgstr "        :"
 
 #. Type: note
 #. Description
@@ -78,13 +75,13 @@ msgstr " ${KERNEL_BOOT}"
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr "из приглашения OpenFirmware."
+msgstr "  OpenFirmware."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "Установка переменных firmware для автозагрузки"
+msgstr "  firmware  "
 
 #. Type: note
 #. Description
@@ -96,11 +93,8 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Для автоматического запуска Debian требуется установить некоторые переменные "
-"в Netwinder NeTTrom firmware. В конце этой стадии установки, система будет "
-"перезагружена, и будет произведена попытка автозагрузки с помощью firmware."
-"Вы можете отменить это, нажав любую клавишу. Затем вы попадёте в командную "
-"систему NeTTrom, где выполните следующие команды:"
+"   Debian      Netwinder NeTTrom firmware.     ,   ,        "
+"firmware.   ,   .       NeTTrom,    :"
 
 #. Type: note
 #. Description
@@ -126,16 +120,13 @@ msgstr ""
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
-msgstr ""
-"Это необходимо сделать только один раз. После этого, введите команду \"boot"
-"\" или перезагрузите систему, чтобы перейти к следующему этапу установки "
-"Debian."
+msgstr "     .  ,   \"boot\"   ,       Debian."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Системный загрузчик не установлен"
+msgstr "   "
 
 #. Type: note
 #. Description
@@ -143,10 +134,7 @@ msgstr "Системный загрузчик не установлен"
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
-msgstr ""
-"Системный загрузчик не был установлен, поскольку либо вы решили не "
-"устанавливать загрузчик, либо установка системного загрузчика на ваш тип "
-"компьютера пока невозможна."
+msgstr "    ,       ,          ."
 
 #. Type: note
 #. Description
@@ -154,6 +142,4 @@ msgstr ""
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
-msgstr ""
-"Вам придется загружать ядро ${KERNEL_LOC} вручную и передать ему в качестве "
-"аргумента ${BOOT} и ${ROOT}."
+msgstr "    ${KERNEL_LOC}        ${BOOT}  ${ROOT}."
