--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer Level 1\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-06-05 21:13+0930\n"
+"PO-Revision-Date: 2005-07-31 14:48+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <debian-l10n-vietnamese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -32,7 +32,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Tiếp tục mà không có bộ tải khởi động"
+msgstr "Tip tc m khng c b ti khi ng"
 
 #. Type: note
 #. Description
@@ -43,10 +43,9 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Cần phải lặp một số biến trong Pegasos OpenFirmware để mà hệ thống bạn tự "
-"động khởi động Debian. Tại kết thúc cài đặt thì hệ thống sẽ khởi động lại. "
-"Khi xem dấu nhắc Pegasos OpenFirmware, bạn hãy lập những biến OpenFirmware "
-"theo đây để hiệu lực tự động khởi động:"
+"Cn phi lp mt s bin trong Pegasos OpenFirmware  m h thng bn t ng khi ng "
+"Debian. Ti kt thc ci t th h thng s khi ng li. Khi xem du nhc Pegasos "
+"OpenFirmware, bn hy lp nhng bin OpenFirmware theo y  hiu lc t ng khi ng:"
 
 # Variable: do not translate/ biến: đừng dịch
 #. Type: note
@@ -68,7 +67,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Hoặc bạn có thể tự khởi động hạt nhân bằng cách nhập:"
+msgstr "Hoc bn c th t khi ng ht nhn bng cch nhp:"
 
 # Type: note
 # Description
@@ -85,13 +84,13 @@ msgstr " ${KERNEL_BOOT}"
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr "tại dấu nhắc OpenFirmware."
+msgstr "ti du nhc OpenFirmware."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "Đang lập những biến phần vững (firmware) để tự động khởi động"
+msgstr "ang lp nhng bin phn vng (firmware)  t ng khi ng"
 
 #. Type: note
 #. Description
@@ -103,11 +102,10 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Cần phải lập một số biến trong phần vững Netwinder NeTTrom để mà hệ thống "
-"bạn sẽ tự động khởi động Debian. Tại kết thúc giai đoạn cài đặt thì hệ thống "
-"sẽ khởi động lại, và phần vững sẽ cố tự động khởi động. Có thể hủy bỏ hành "
-"động này bằng cách bấm bất cứ phím nào. Vậy sẽ thả bạn vào hệ thống lệnh "
-"NeTTrom nơi mà hãy thực hiện những lệnh theo đây:"
+"Cn phi lp mt s bin trong phn vng Netwinder NeTTrom  m h thng bn s t ng khi "
+"ng Debian. Ti kt thc giai on ci t th h thng s khi ng li, v phn vng s c t ng "
+"khi ng. C th hy b hnh ng ny bng cch bm bt c phm no. Vy s th bn vo h thng lnh "
+"NeTTrom ni m hy thc hin nhng lnh theo y:"
 
 # Variable: do not translate/ biến: đừng dịch
 #. Type: note
@@ -135,9 +133,8 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
 msgstr ""
-"Bạn sẽ chỉ cần phải làm như thế một lần. Sau đó thì hãy nhập lệnh \"boot"
-"\" (khởi động) hay khởi động lại hệ thống để tiếp tục đến giai đoạn cài đặt "
-"Debian kế."
+"Bn s ch cn phi lm nh th mt ln. Sau  th hy nhp lnh \"boot\" (khi ng) hay khi "
+"ng li h thng  tip tc n giai on ci t Debian k."
 
 # Type: note
 # Description
@@ -145,7 +142,7 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Chưa cài đặt bộ tải khởi động nào."
+msgstr "Cha ci t b ti khi ng no."
 
 # Type: note
 # Description
@@ -156,8 +153,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Chưa cài đặt bộ tải khởi động, hoặc vì bạn chọn hoặc vì kiến trúc dứt khoát "
-"này chưa hỗ trợ bộ tải khởi động."
+"Cha ci t b ti khi ng, hoc v bn chn hoc v kin trc dt khot ny cha h tr b ti "
+"khi ng."
 
 #. Type: note
 #. Description
@@ -166,5 +163,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
 msgstr ""
-"Sẽ cần phải tự khởi động với hạt nhân ${KERNEL} trên vùng ${BOOT} và gởi "
-"${ROOT} như là đối số hạt nhân."
+"S cn phi t khi ng vi ht nhn ${KERNEL} trn vng ${BOOT} v gi ${ROOT} nh l i s "
+"ht nhn."
