[l10n] [l10n-sync] Synchronising with translation files from packages/po
r29862

--- a/debian/po/be.po
+++ b/debian/po/be.po
@@ -30,8 +30,9 @@ msgstr ""
 #. Description
 #. Main menu item
 #: ../nobootloader.templates:4
+#, fuzzy
 msgid "Continue without boot loader"
-msgstr ""
+msgstr "    ?"
 
 #. Type: note
 #. Description
