--- a/debian/po/zh_CN.po
+++ b/debian/po/zh_CN.po
@@ -23,8 +23,9 @@ msgstr ""
 #. Description
 #. Main menu item
 #: ../nobootloader.templates:4
+#, fuzzy
 msgid "Continue without boot loader"
-msgstr ""
+msgstr " aboot "
 
 #. Type: note
 #. Description
@@ -115,8 +116,9 @@ msgstr "boot Debian "
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
+#, fuzzy
 msgid "No boot loader installed"
-msgstr ""
+msgstr "yaboot "
 
 #. Type: note
 #. Description
