--- a/debian/po/ja.po
+++ b/debian/po/ja.po
@@ -23,8 +23,9 @@ msgstr ""
 #. Description
 #. Main menu item
 #: ../nobootloader.templates:4
+#, fuzzy
 msgid "Continue without boot loader"
-msgstr ""
+msgstr "aboot "
 
 #. Type: note
 #. Description
@@ -72,8 +73,9 @@ msgstr " OpenFirmware "
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
+#, fuzzy
 msgid "Setting firmware variables for automatic boot"
-msgstr ""
+msgstr "Arcboot  PROM "
 
 #. Type: note
 #. Description
@@ -115,8 +117,9 @@ msgstr " 1  Debian \"boot\" "
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
+#, fuzzy
 msgid "No boot loader installed"
-msgstr ""
+msgstr ":"
 
 #. Type: note
 #. Description
