--- a/debian/po/zh_TW.po
+++ b/debian/po/zh_TW.po
@@ -24,8 +24,9 @@ msgstr ""
 #. Description
 #. Main menu item
 #: ../nobootloader.templates:4
+#, fuzzy
 msgid "Continue without boot loader"
-msgstr ""
+msgstr " aboot "
 
 #. Type: note
 #. Description
@@ -67,14 +68,16 @@ msgstr " ${KERNEL_BOOT}"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
+#, fuzzy
 msgid "at the OpenFirmware prompt."
-msgstr ""
+msgstr " OpenFirmware"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
+#, fuzzy
 msgid "Setting firmware variables for automatic boot"
-msgstr ""
+msgstr " Arcboot  PROM "
 
 #. Type: note
 #. Description
@@ -116,8 +119,9 @@ msgstr " \"boot\"  Debian "
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
+#, fuzzy
 msgid "No boot loader installed"
-msgstr ""
+msgstr "Yaboot "
 
 #. Type: note
 #. Description
